chore: refactoring MetricType Management